package com.example.fxtesting;

public class User {

    private String userN;
    User(String userN){
        this.userN=userN;
    }

    public String getUserN() {
        return userN;
    }
}
